src/test/deca/context/valid/created/decl-float-var.deca
//Description :
// Declaration d'une variable float avec initialisation
//
// Resultats :
//


{
    float x = 1.0;
}
