src/test/deca/context/invalid/created/double-affect-diff.deca
//Description :
// Test d'une double initialisation
//
// Resultats :
// Erreur


{
    int x = 2;
    float x = 2.0;
}
